Kubernetes/mlb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mlb-service
  labels:
    app: mlb-app
spec:
  type: LoadBalancer
  selector:
    app: mlb-app
  ports:
    - protocol: TCP
      port: 81
      targetPort: 81
