Kubernetes/nfl-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nfl-service
  labels:
    app: nfl-app
spec:
  type: LoadBalancer
  selector:
    app: nfl-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
