Kubernetes/istio-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: istio-ingress
  annotations:
    kubernetes.io/ingress.class: istio
    istio.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: gameservice-ingress
  rules:
    - host: "theunhousedbets.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nfl-service
                port:
                  name: http
                  number: 80
