Kubernetes/nfl-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nfl-ingress
  namespace: game-2048
  annotations:
    alb.ingress.kubernetes.io/rewrite-target: /
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nfl
                port:
                  number: 80
